Add required javascripts.

--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,11 @@
 <head>
 <title>Orientation Tester</title>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.js"></script>
-<script src="/www/js/modernizr-2.0.3.js"></script>
-<script src="/www/js/modernizr.accelerometer.js"></script>
-<script src="/www/js/modernizr.gyroscope.js"></script>
-<script type='text/javascript' src='/www/js/jqm.mobile-utilities.js'></script>
-<script type='text/javascript' src='/www/js/jquery.custom-events.js'></script>
+<script src="/javascripts/modernizr-2.0.3.js"></script>
+<script src="/javascripts/modernizr.accelerometer.js"></script>
+<script src="/javascripts/modernizr.gyroscope.js"></script>
+<script src='/javascripts/jqm.mobile-utilities.js'></script>
+<script src='/javascripts/jquery.custom-events.js'></script>
 <meta name="viewport" content="width=550;" />
 </head>
 <body>
